More front end work done

--- a/client/index.html
+++ b/client/index.html
@@ -47,19 +47,52 @@
     </nav>
 
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="branding-section">
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
-        <p>
-          <div id="root"></div>
-        </p>
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2">
+						<h2>work references made simple</h2>
+		        <p class="lead">No more ‘dubious’ references. Fully validated by LinkedIn.<br>
+							Completed online at the click of a button and no more lengthy phone calls.<br>
+							Save time, money and resource - now and down the line...and, it’s free</p>
+						<p>&nbsp;</p>
+		        <p class="align-center">
+		          <a href="#" class="btn-pink btn btn-lg">Employers</a> <a href="#" class="btn-green btn btn-lg">Employees</a>
+		        </p>
+					</div>
+				</div>
       </div>
 
     </div> <!-- /container -->
+
+		<main id="homepage-main">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2">
+						<h2>How It Works</h2>
+
+						<figure class="img-responsive">
+							<img src="images/dotted-circles.png" alt="">
+						</figure>
+					</div>
+				</div>
+			</div>
+		</main>
+
+		<footer class="footer">
+			<div class="top-footer">
+	      <div class="container">
+	        <p class="text-muted">Place sticky footer content here.</p>
+	      </div>
+			</div> <!-- /.top-footer-->
+			<div class="bottom-footer">
+				<div class="container">
+	        <p class="text-muted">Place sticky footer content here.</p>
+	      </div>
+			</div> <!-- /.bottom-footer -->
+    </footer>
 
 		<script src="javascript/app.js"></script>
 	</body>
