front page layout

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link href="styles/main.css" type="text/css" rel="stylesheet">
-		<title>Hey</title>
+		<title>Ripe</title>
 	</head>
 
 	<body>
@@ -78,18 +78,152 @@
 						</figure>
 					</div>
 				</div>
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2">
+						<h2>What You Get</h2>
+						<h3>Is It Really Jimmy's Old Boss...<br>
+						Or His Best Mate With A Golden Tongue?</h3>
+					</div>
+					<div class="col-md-5">
+							<img class="img-responsive" src="images/avatar.png" alt="">
+					</div>
+					<div class="col-md-7">
+						<p>
+							Each referee is validated using their LinkedIn account. This
+							means you will know who filled out the form, where they
+							work and their job title.<br>
+							Get a detailed report emailed to you with Reference results
+								<img class="img-responsive" src="images/reference-list.png" alt="">
+						</p>
+					</div>
+				</div>
 			</div>
 		</main>
 
+		<main id="homepage-employers"> <!-- pink section -->
+			<div class="container-liquid">
+				<div class="container">
+					<h2>Employers</h2>
+					<h3>Make The Ripe Hire!</h3>
+					<p>
+						Get condifential reference reports on your potential new hires, direct to your inbox.
+						<br>
+					</p>
+					<p>
+						Because each referee uses LinkedIn to authenticate - you'll know exactly who completed it.<br>
+						You'll recieve their name, job title and company they work for. There's no cheating the system,<br>
+						wasted time by trying to each out by phone or expense incurred.
+					</p>
+				</div>
+			</div>
+		</main>
+		<div id="triangle-down">
+		</div>
+
+		<div id="homepage-category"> <!-- white section-->
+			<div class="container">
+				<h3>Select The Most Revenant Category Below</h3>
+				<h4>
+					Don't worry, you can edit, add or remote any additional questions to <br>
+					make it fully personalized and relevant to you and your job.
+				</h4>
+				<div class="col-md-3">
+					<button type="button" class="general-btn">
+						General
+					</button>
+				</div>
+				<div class="col-md-3">
+					<button type="button" class="marketing-btn">
+						Marketing
+					</button>
+				</div>
+				<div class="col-md-3">
+					<button type="button" class="software-btn">
+						Software<br>
+						Development
+					</button>
+				</div>
+				<div class="col-md-3">
+					<button type="button" class="creative-btn">
+						Creative
+					</button>
+				</div>
+			</div>
+		</div>
+
+		<main id="homepage-employees"> <!-- green section -->
+			<div class="container-liquid">
+				<div class="container">
+					<h2>Employees</h2>
+					<h3>Strengthen Your Profile And Land That Job!</h3>
+					<p>
+						Proactively provide references from your most influential referees. Send referees your unique<br>
+						URL to simply fill out the questionnarie online. You'll then automaticlly recieve a report back<br>
+						with your score and comments on your skills.
+					</p>
+				</div>
+			</div>
+		</main>
+		<div id="triangle-down-green">
+		</div>
+
+		<div id="homepage-category"> <!-- white section-->
+			<div class="container">
+				<h3>Select The Category Most Suitable For You</h3>
+				<h4>
+					Don't worry, you can edit, add or remote any additional questions to <br>
+					make it fully personalized and relevant to you and your job.
+				</h4>
+				<div class="col-md-3">
+					<button type="button" class="general-btn">
+						General
+					</button>
+				</div>
+				<div class="col-md-3">
+					<button type="button" class="marketing-btn">
+						Marketing
+					</button>
+				</div>
+				<div class="col-md-3">
+					<button type="button" class="software-btn">
+						Software<br>
+						Development
+					</button>
+				</div>
+				<div class="col-md-3">
+					<button type="button" class="creative-btn">
+						Creative
+					</button>
+				</div>
+			</div>
+		</div>
+
 		<footer class="footer">
 			<div class="top-footer">
-	      <div class="container">
-	        <p class="text-muted">Place sticky footer content here.</p>
-	      </div>
+	      <nav class="navbar navbar-default navbar-static-bottom">
+					<div class="container">
+						<div id="footer-nav">
+			        <ul class="nav navbar-nav">
+			          <li><a href="#">How It Works</a></li>
+			          <li><a href="#">What You Get</a></li>
+			          <li><a href="#">Employer</a></li>
+								<li><a href="#">Employee</a></li>
+							</ul>
+						</div>
+					</div>
+				</nav>
 			</div> <!-- /.top-footer-->
 			<div class="bottom-footer">
 				<div class="container">
-	        <p class="text-muted">Place sticky footer content here.</p>
+	        <div class="col-md-4">
+						<a href="#">Terms and Conditions</a> | <a href="#">Private Policy</a>
+					</div>
+					<div class="col-md-4">
+						<a href="#"><img class="img-responsive" src="images/logo.png"></a>
+					</div>
+					<div class="col-md-4">
+						<a href="#">Hello@Riperreference.com</a>
+					</div>
 	      </div>
 			</div> <!-- /.bottom-footer -->
     </footer>
