Add the quicksand font

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link href="styles/main.css" type="text/css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 		<title>Ripe</title>
 	</head>
 
