Fixed additional pages

--- a/client/employees.html
+++ b/client/employees.html
@@ -47,71 +47,71 @@
       </div>
     </nav>
 
+		<!-- NON LAYOUT -->
 
-    <div class="container-fluid" id="branding-section">
+		<main id="homepage-employees"> <!-- pink section -->
 
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2">
-						<h2>work references made simple</h2>
-		        <p class="lead">No more ‘dubious’ references. Fully validated by LinkedIn.<br>
-							Completed online at the click of a button and no more lengthy phone calls.<br>
-							Save time, money and resource - now and down the line...and, it’s free</p>
-						<p>&nbsp;</p>
-		        <p class="text-center">
-		          <a href="#" class="btn-pink btn btn-lg">Employers</a> <a href="#" class="btn-green btn btn-lg">Employees</a>
-		        </p>
-					</div>
+			<div class="triangle-wrapper">
+
+				<div class="container">
+					<h2>Employees</h2>
+					<h3>Strengthen Your Profile And Land That Job!</h3>
+					<p>
+						Proactively provide references from your most influential referees. Send referees your unique<br>
+						URL to simply fill out the questionnarie online. You'll then automaticlly recieve a report back<br>
+						with your score and comments on your skills.
+					</p>
 				</div>
-      </div>
-
-    </div> <!-- /container -->
-
-		<main id="homepage-main">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2">
-						<h2>How It Works</h2>
-
-						<figure>
-							<img class="img-responsive" src="images/dotted-circles.png" alt="">
-						</figure>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2">
-						<h2>What You Get</h2>
-						<h3>Is It Really Jimmy's Old Boss...<br>
-						Or His Best Mate With A Golden Tongue?</h3>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2">
-						<div class="row">
-							<div class="col-md-5">
-									<img class="img-responsive" src="images/avatar.png" alt="">
-							</div>
-							<div class="col-md-7">
-								<p>
-									Each referee is validated using their LinkedIn account. This
-									means you will know who filled out the form, where they
-									work and their job title.
-								</p>
-								<p>
-									Get a detailed report emailed to you with Reference results
-								</p>
-								<figure>
-									<img class="img-responsive" src="images/reference-list.png" alt="">
-								</figure>
-								</p>
-							</div> <!-- /.col-md-7 -->
-						</div> <!-- /.row -->
-					</div> <!-- /.col-md-8 -->
-				</div> <!-- /.row -->
 
 			</div>
+
+			<div class="triangle-down"></div>
+
+			<div class="homepage-category"> <!-- white section-->
+				<div class="container">
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2">
+							<h3>Select The Category Most Suitable For You</h3>
+							<h4>
+								Don't worry, you can edit, add or remote any additional questions to <br>
+								make it fully personalized and relevant to you and your job.
+							</h4>
+
+							<div class="row">
+
+								<div class="col-md-3">
+									<button type="button" class="general-btn">
+										General
+									</button>
+								</div>
+								<div class="col-md-3">
+									<button type="button" class="marketing-btn">
+										Marketing
+									</button>
+								</div>
+								<div class="col-md-3">
+									<button type="button" class="software-btn">
+										Software<br>
+										Development
+									</button>
+								</div>
+								<div class="col-md-3">
+									<button type="button" class="creative-btn">
+										Creative
+									</button>
+								</div>
+
+							</div> <!-- /.row -->
+
+						</div> <!-- /.col -->
+
+					</div> <!-- /.row -->
+				</div>
+			</div>
+
 		</main>
+
+		<!-- /NON LAYOUT -->
 
 		<footer class="footer">
 			<div class="top-footer">
