added pages and links

--- a/client/index.html
+++ b/client/index.html
@@ -16,15 +16,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
 						<img src="images/logo.png">
 					</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -60,7 +60,7 @@
 							Save time, money and resource - now and down the line...and, it’s free</p>
 						<p>&nbsp;</p>
 		        <p class="text-center">
-		          <a href="#" class="btn-pink btn btn-lg">Employers</a> <a href="#" class="btn-green btn btn-lg">Employees</a>
+		          <a href="employers.html" class="btn-pink btn btn-lg">Employers</a> <a href="employees.html" class="btn-green btn btn-lg">Employees</a>
 		        </p>
 					</div>
 				</div>
@@ -121,8 +121,8 @@
 			        <ul class="nav navbar-nav">
 			          <li><a href="#">How It Works</a></li>
 			          <li><a href="#">What You Get</a></li>
-			          <li><a href="#">Employer</a></li>
-								<li><a href="#">Employee</a></li>
+			          <li><a href="employers.html">Employer</a></li>
+								<li><a href="employees.html">Employee</a></li>
 							</ul>
 						</div>
 					</div>
@@ -131,10 +131,10 @@
 			<div class="bottom-footer">
 				<div class="container">
 	        <div class="col-md-4">
-						<a href="#">Terms and Conditions</a> | <a href="#">Private Policy</a>
+						<a href="termsandconditions.html">Terms and Conditions</a> | <a href="privatepolicy.html">Private Policy</a>
 					</div>
 					<div class="col-md-4">
-						<a href="#"><img class="img-responsive" src="images/logo.png"></a>
+						<a href="index.html"><img class="img-responsive" src="images/logo.png"></a>
 					</div>
 					<div class="col-md-4">
 						<a href="#">Hello@Riperreference.com</a>
