--- a/client/questionnaire.html
+++ b/client/questionnaire.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link href="styles/main.css" type="text/css" rel="stylesheet">
+		<link href="/styles/main.css" type="text/css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 		<title>Ripe</title>
 	</head>
@@ -16,8 +16,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">
-						<img src="images/logo.png">
+					<a class="navbar-brand" href="/">
+						<img src="/images/logo.png">
 					</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
