--- a/client/termsandconditions.html
+++ b/client/termsandconditions.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link href="styles/main.css" type="text/css" rel="stylesheet">
+		<link href="/styles/main.css" type="text/css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 		<title>Ripe</title>
 	</head>
@@ -16,15 +16,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">
-						<img src="images/logo.png">
+					<a class="navbar-brand" href="/">
+						<img src="/images/logo.png">
 					</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
